--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -50,18 +50,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src_dir import mk_laplace_2d,mk_laplace_2d_Tensor\n",
+    "from src_dir import mk_laplace_2d, mk_laplace_2d_Tensor\n",
     "import numpy as np\n",
     "\n",
     "# Set dimension of the NxN grid used\n",
-    "# Note: For optimal performance, the neural network \"cnn_collectionOnline2D.py\"  can be tweaked with appropriate kernel dilations, however the\n",
-    "# code should still work and yield resuluts for any dimension of input provided\n",
-    "dim=20\n",
+    "# Note: For optimal performance, the neural network \"cnn_collectionOnline2D.py\"\n",
+    "# can be tweaked with appropriate kernel dilations, however the code should\n",
+    "# still work and yield resuluts for any dimension of input provided\n",
+    "dim = 20\n",
     "\n",
-    "# Default initial guess used for direct \n",
-    "# un-preconditioned GMRES is the zero solution\n",
-    "x0=np.squeeze(np.zeros((dim,dim)))\n",
-    "x0Type='Zero Solution 2D'\n",
+    "# Default initial guess used for direct un-preconditioned GMRES is the zero\n",
+    "# solution\n",
+    "x0 = np.squeeze(np.zeros((dim,dim)))\n",
+    "x0Type = 'Zero Solution 2D'\n",
     "\n",
     "# Set tolerances for GMRES solver\n",
     "e = 1e-5\n",
@@ -72,22 +73,21 @@
     "\n",
     "# Create domain [-1,1]x[-1,1]\n",
     "# Define grid values at midpoints of cartesian grid\n",
-    "DomainL=-1.0\n",
-    "DomainR=1.0\n",
-    "dx=(DomainR-DomainL)/(dim-1)\n",
-    "x1=np.linspace(DomainL+dx,DomainR-dx,dim)\n",
-    "x2=np.linspace(DomainL+dx,DomainR-dx,dim)\n",
+    "DomainL = -1.0\n",
+    "DomainR =  1.0\n",
+    "dx = (DomainR-DomainL)/(dim-1)\n",
+    "x1 = np.linspace(DomainL+dx,DomainR-dx,dim)\n",
+    "x2 = np.linspace(DomainL+dx,DomainR-dx,dim)\n",
     "X, Y = np.meshgrid(x1, x2, sparse=False, indexing='ij')\n",
-    "Area=(dx*(dim-1))**2\n",
+    "Area = (dx*(dim-1))**2\n",
     "\n",
-    "# Create 2D laplace opertor as\n",
-    "# a stencil opertor for a N-cell 2D grid\n",
+    "# Create 2D laplace opertor as a stencil opertor for a N-cell 2D grid\n",
     "# Can be found in linop.py in src_di\n",
-    "A=mk_laplace_2d(dim,dim,bc=\"dirichlet\", xlo=0, xhi=0, ylo=0, yhi=0)\n",
-    "AType='2D Laplacian'\n",
+    "A = mk_laplace_2d(dim, dim, bc=\"dirichlet\", xlo=0, xhi=0, ylo=0, yhi=0)\n",
+    "AType = '2D Laplacian'\n",
     "\n",
     "# Total number of steps in simulation\n",
-    "n_steps = 1000"
+    "n_steps = 100"
    ]
   },
   {
@@ -110,20 +110,21 @@
     "from src_dir import Gauss_pdf_2D\n",
     "\n",
     "# Compute dipole\n",
-    "xloc=np.random.uniform(x1[0],x1[-1])\n",
-    "yloc=np.random.uniform(x2[0],x2[-1])\n",
-    "xlocShift=np.random.uniform(-0.25,0.25)\n",
-    "ylocShift=np.random.uniform(-0.25,0.25)\n",
-    "AmplitudeFactor= np.random.uniform(1,10)\n",
-    "AmplitudeFactor2= AmplitudeFactor*np.random.uniform(1,2)\n",
-    "sigma=0.07*np.random.uniform(0.9,1.1)\n",
-    "b=AmplitudeFactor*Gauss_pdf_2D(X,Y,xloc,yloc,sigma)+AmplitudeFactor2*Gauss_pdf_2D(X,Y,xloc+xlocShift,yloc+ylocShift,sigma)\n",
+    "xloc      = np.random.uniform(x1[0], x1[-1])\n",
+    "yloc      = np.random.uniform(x2[0], x2[-1])\n",
+    "xlocShift = np.random.uniform(-0.25, 0.25)\n",
+    "ylocShift = np.random.uniform(-0.25, 0.25)\n",
+    "AmplitudeFactor  = np.random.uniform(1,10)\n",
+    "AmplitudeFactor2 = AmplitudeFactor*np.random.uniform(1,2)\n",
+    "sigma = 0.07*np.random.uniform(0.9,1.1)\n",
+    "b     = AmplitudeFactor*Gauss_pdf_2D(X, Y, xloc, yloc, sigma) \\\n",
+    "      + AmplitudeFactor2*Gauss_pdf_2D(X, Y, xloc + xlocShift, yloc + ylocShift, sigma)\n",
     "\n",
     "# Compute random field\n",
-    "Field=np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
-    "Field= AmplitudeFactor*np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
+    "# Field = np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
+    "Field = AmplitudeFactor*np.random.normal(loc=0.0, scale=1.0, size=(dim, dim))\n",
     "\n",
-    "b=b+Field\n",
+    "b = b + Field\n",
     "\n",
     "pp.contourf(X,Y,b)\n",
     "pp.colorbar()\n",
@@ -161,11 +162,11 @@
     "Initial_set = 32\n",
     "\n",
     "nn_precon = CNNPredictorOnline_2D(InputDim, OutputDim, Area, dx, FluidNet2D20)\n",
-    "trainer = PreconditionerTrainer(nn_precon)\n",
+    "trainer   = PreconditionerTrainer(nn_precon, Initial_set=Initial_set)\n",
     "\n",
     "@timer\n",
     "@cnn_preconditionerOnline_timed_2D(trainer)\n",
-    "def MLGMRES(A, b ,x0, e, nmax_iter, restart, debug):\n",
+    "def MLGMRES(A, b, x0, e, nmax_iter, restart, debug):\n",
     "    return GMRES(A, b, x0, e, nmax_iter, restart, debug)\n",
     "\n",
     "\n",
@@ -197,42 +198,43 @@
    },
    "outputs": [],
    "source": [
-    "from src_dir import Gauss_pdf_2D,resid,StatusPrinter\n",
+    "from src_dir import Gauss_pdf_2D, resid, StatusPrinter\n",
     "\n",
     "#Set the numpy seed\n",
     "np.random.seed(0)\n",
     "\n",
-    "# Initialize lists that hold time data (time-to-solutuin, trainining time, MLGMRES time, etc)\n",
-    "# ML_GMRES_Time_list=[]\n",
-    "run_time_ML_list=[]\n",
-    "GmresRunTimeOriginal=[]\n",
-    "SpeedUp=[]\n",
-    "trainTime_list=[]\n",
+    "# Initialize lists that hold time data (time-to-solutuin, trainining time,\n",
+    "# MLGMRES time, etc)\n",
+    "run_time_ML_list     = []\n",
+    "GmresRunTimeOriginal = []\n",
+    "SpeedUp              = []\n",
+    "trainTime_list       = []\n",
     "\n",
-    "# Set debug mode)prints more information to screen)\n",
-    "debug=True\n",
+    "# Set debug mode (prints more information to screen)\n",
+    "debug = True\n",
     "\n",
-    "NonML_Err_List=[]\n",
-    "NonML_Err_List_Full=[]\n",
+    "NonML_Err_List      = []\n",
+    "NonML_Err_List_Full = []\n",
     "\n",
     "# Index of  Poisson problems solved\n",
     "for ProbIdx in range(n_steps):\n",
     "\n",
     "    # Set RHS of Poisson problem\n",
-    "    xloc=np.random.uniform(x1[0],x1[-1])\n",
-    "    yloc=np.random.uniform(x2[0],x2[-1])\n",
-    "    xlocShift=np.random.uniform(-0.25,0.25)\n",
-    "    ylocShift=np.random.uniform(-0.25,0.25)\n",
-    "    AmplitudeFactor= np.random.uniform(0.01,10)\n",
-    "    AmplitudeFactor2= AmplitudeFactor*np.random.uniform(1,2)\n",
-    "    sigma=0.07*np.random.uniform(0.9,1.1)\n",
-    "    b=AmplitudeFactor*Gauss_pdf_2D(X,Y,xloc,yloc,sigma)+AmplitudeFactor2*Gauss_pdf_2D(X,Y,xloc+xlocShift,yloc+ylocShift,sigma)\n",
-    "    Field=np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
-    "    Field= AmplitudeFactor*np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
-    "    b=b+Field\n",
+    "    xloc      = np.random.uniform(x1[0], x1[-1])\n",
+    "    yloc      = np.random.uniform(x2[0], x2[-1])\n",
+    "    xlocShift = np.random.uniform(-0.25, 0.25)\n",
+    "    ylocShift = np.random.uniform(-0.25, 0.25)\n",
+    "    AmplitudeFactor  = np.random.uniform(0.01, 10)\n",
+    "    AmplitudeFactor2 = AmplitudeFactor*np.random.uniform(1, 2)\n",
+    "    sigma = 0.07*np.random.uniform(0.9, 1.1)\n",
+    "    b     = AmplitudeFactor*Gauss_pdf_2D(X, Y, xloc, yloc, sigma) \\\n",
+    "          + AmplitudeFactor2*Gauss_pdf_2D(X, Y, xloc + xlocShift, yloc + ylocShift, sigma)\n",
+    "    # Field = np.random.normal(loc=0.0, scale=1.0, size=(dim,dim))\n",
+    "    Field = AmplitudeFactor*np.random.normal(loc=0.0, scale=1.0, size=(dim, dim))\n",
+    "    b = b + Field\n",
     "\n",
     "    # b=np.maximum(xloc*2*X*np.sin(ProbIdx),yloc*2*Y*np.cos(ProbIdx))  # Linear gradient example\n",
-    "    b=b*(dx**2.0) # Finite difference grid spacing\n",
+    "    b = b*(dx**2.0) # Finite difference grid spacing\n",
     "\n",
     "    # First GMRES call (solve up to e1 tolerance) with ML wrapper\n",
     "    trainer.ProbCount = ProbIdx  # TODO: This should probably be automatically incremented\n",
@@ -244,8 +246,8 @@
     "        trainTime_list.append(trainer.trainTime[-1]) # TODO: this second list is not needed\n",
     "    \n",
     "    # Direct GMRES call up to e1 tolerance\n",
-    "    NonML_Out1,run_time1=GMRES_timed(A, b, x0, e, nmax_iter, restart, debug)  \n",
-    "    NonML_Err=resid(A, NonML_Out1, b)\n",
+    "    NonML_Out1,run_time1 = GMRES_timed(A, b, x0, e, nmax_iter, restart, debug)  \n",
+    "    NonML_Err = resid(A, NonML_Out1, b)\n",
     "    NonML_Err_List_Full.append(NonML_Err)\n",
     "    NonML_Err_List.append(NonML_Err[22])\n",
     "\n",
@@ -262,10 +264,10 @@
     "StatusPrinter().finalize()\n",
     "\n",
     "\n",
-    "MLGMRES_GMRES_ONLY=sum(trainer.ML_GMRES_Time_list)\n",
-    "run_time=sum(GmresRunTimeOriginal)\n",
-    "run_time_ML=sum(run_time_ML_list)\n",
-    "trainTime_total=sum(trainTime_list)\n",
+    "MLGMRES_GMRES_ONLY = sum(trainer.ML_GMRES_Time_list)\n",
+    "run_time           = sum(GmresRunTimeOriginal)\n",
+    "run_time_ML        = sum(run_time_ML_list)\n",
+    "trainTime_total    = sum(trainTime_list)\n",
     "\n",
     "\n",
     "print(\"Runtime of Non-decorated version is: \",     run_time)\n",
@@ -291,28 +293,28 @@
     "from src_dir import moving_average\n",
     "\n",
     "# Compute moving average of GMRES and MLGMRES error\n",
-    "AVG=np.zeros((n_steps,1))\n",
-    "count=np.arange(0,n_steps)\n",
+    "AVG   = np.zeros((n_steps, 1))\n",
+    "count = np.arange(0, n_steps)\n",
     "\n",
-    "Err_Array=np.asarray(NonML_Err_List)\n",
-    "count=np.arange(0,n_steps)\n",
-    "for j in range(0,n_steps):\n",
-    "    AVG[j]=moving_average(np.asarray(Err_Array[:j]),j)\n",
+    "Err_Array = np.asarray(NonML_Err_List)\n",
+    "count     = np.arange(0, n_steps)\n",
+    "for j in range(0, n_steps):\n",
+    "    AVG[j] = moving_average(np.asarray(Err_Array[:j]), j)\n",
     "\n",
-    "Err_Array_ML=np.asarray(trainer.Err_list)\n",
-    "AVGML=np.zeros((n_steps,1))\n",
-    "for j in range(0,n_steps):\n",
-    "    AVGML[j]=moving_average(np.asarray(Err_Array_ML[:j]),j)    \n",
+    "Err_Array_ML = np.asarray(trainer.Err_list)\n",
+    "AVGML        = np.zeros((n_steps, 1))\n",
+    "for j in range(0, n_steps):\n",
+    "    AVGML[j] = moving_average(np.asarray(Err_Array_ML[:j]), j)    \n",
     "\n",
     "# Compute moving average of GMRES and MLGMRES run-times\n",
-    "GmresRunTimeOriginal_AVG=np.zeros((n_steps,1))\n",
-    "ML_GMRES_Time_AVG=np.zeros((n_steps,1))\n",
+    "GmresRunTimeOriginal_AVG = np.zeros((n_steps, 1))\n",
+    "ML_GMRES_Time_AVG        = np.zeros((n_steps, 1))\n",
     "\n",
-    "for j in range(0,n_steps):\n",
-    "    GmresRunTimeOriginal_AVG[j]=moving_average(np.asarray(GmresRunTimeOriginal[:j]),j)\n",
+    "for j in range(0, n_steps):\n",
+    "    GmresRunTimeOriginal_AVG[j] = moving_average(np.asarray(GmresRunTimeOriginal[:j]), j)\n",
     "\n",
-    "for j in range(0,n_steps):\n",
-    "    ML_GMRES_Time_AVG[j]=moving_average(np.asarray(trainer.ML_GMRES_Time_list[:j]),j)"
+    "for j in range(0, n_steps):\n",
+    "    ML_GMRES_Time_AVG[j] = moving_average(np.asarray(trainer.ML_GMRES_Time_list[:j]), j)"
    ]
   },
   {
