--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -162,6 +162,7 @@
     "Initial_set = 32\n",
     "\n",
     "nn_precon = CNNPredictorOnline_2D(InputDim, OutputDim, Area, dx, FluidNet2D20)\n",
+    "# TODO: using diagnostic_probe=22 => end of first inner loop for the current setup => generalize this\n",
     "trainer   = PreconditionerTrainer(nn_precon, Initial_set=Initial_set)\n",
     "\n",
     "@timer\n",
