--- a/Underdamped Particle Demo.ipynb
+++ b/Underdamped Particle Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a5e0cb13-bfeb-4488-804e-e61c8c8dd25b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "86c4ec54-2888-4d97-9967-67f148b3d21f",
    "metadata": {},
    "outputs": [],
@@ -26,10 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6cc3d58-f50b-4d63-84ca-0361081d8ab1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{FunctionDescriptor(module='PyGMRES.gmres', name='GMRES', signature=<Signature (A, b, x0, e, nmax_iter, restart=None, debug=False)>, func=<function GMRES at 0x129496c10>),\n",
+       " FunctionDescriptor(module='PyGMRES.gmres', name='update_solution', signature=<Signature (x, y, q)>, func=<function update_solution at 0x10a8034c0>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_1d', signature=<Signature (x, i)>, func=<function laplace_1d at 0x12948ce50>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_1d_constextrap', signature=<Signature (x_in)>, func=<function laplace_1d_constextrap at 0x1294961f0>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_1d_dirichlet', signature=<Signature (x_in, xlo, xhi)>, func=<function laplace_1d_dirichlet at 0x129496040>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_1d_extrap', signature=<Signature (x_in)>, func=<function laplace_1d_extrap at 0x1294963a0>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_2d', signature=<Signature (x, i, j)>, func=<function laplace_2d at 0x129496550>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_2d_constextrap', signature=<Signature (x_in)>, func=<function laplace_2d_constextrap at 0x129496a60>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_2d_dirichlet', signature=<Signature (x_in, xlo, xhi, ylo, yhi)>, func=<function laplace_2d_dirichlet at 0x129496700>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='laplace_2d_extrap', signature=<Signature (x_in)>, func=<function laplace_2d_extrap at 0x1294968b0>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='mat_to_a', signature=<Signature (a)>, func=<function mat_to_a at 0x12948c790>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='matmul_a', signature=<Signature (a, b)>, func=<function matmul_a at 0x12948c820>),\n",
+       " FunctionDescriptor(module='PyGMRES.linop', name='resid', signature=<Signature (A, x, b)>, func=<function resid at 0x12948c8b0>)}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from PyGMRES.compiler import Decorated\n",
     "\n",
@@ -39,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34dee2b2-be86-47d8-a50e-082ccbf8dcf9",
    "metadata": {
     "tags": []
@@ -53,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5e736e23-776c-4263-9335-292f6b7bb9e9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a72442ef-ea18-4ed8-b0b4-37bd41cc6e13",
    "metadata": {},
    "outputs": [],
